test: 테스트 클래스 단위로 Transactional 어노테이션 적용